--- a/templates/dashboards/admin/all_orders.html
+++ b/templates/dashboards/admin/all_orders.html
@@ -828,7 +828,7 @@
                                     ${data.Payment.map(item => `
                                     <div class="invoice-item bg-gray-700 p-3 rounded-lg justify-between items-center transition duration-300 hover:bg-gray-600/70">
                                         <div>
-                                            <p class="font-semibold text-light-text">${item.invoice_number}</p>
+                                            <p class="font-semibold text-light-text">${item.id}</p>
                                             <p class="text-xs text-gray-400">Date: ${item.stage_date_time}</p>
                                         </div>
                                         
@@ -872,7 +872,7 @@
                                     ${data.Packing.map(item => `
                                     <div class="invoice-item bg-gray-700 p-3 rounded-lg justify-between items-center transition duration-300 hover:bg-gray-600/70">
                                         <div>
-                                            <p class="font-semibold text-light-text">${item.invoice_number}</p>
+                                            <p class="font-semibold text-light-text">${item.id}</p>
                                             <p class="text-xs text-gray-400">Date: ${item.stage_date_time}</p>
                                         </div>
                                         
@@ -917,7 +917,7 @@
                                     ${data.Transport.map(item => `
                                     <div class="invoice-item bg-gray-700 p-3 rounded-lg justify-between items-center transition duration-300 hover:bg-gray-600/70">
                                         <div>
-                                            <p class="font-semibold text-light-text">${item.invoice_number}</p>
+                                            <p class="font-semibold text-light-text">${item.id}</p>
                                             <p class="text-xs text-gray-400">Date: ${item.stage_date_time}</p>
                                         </div>
                                         
@@ -960,7 +960,7 @@
                                     ${data.Builty.map(item => `
                                     <div class="invoice-item bg-gray-700 p-3 rounded-lg justify-between items-center transition duration-300 hover:bg-gray-600/70">
                                         <div>
-                                            <p class="font-semibold text-light-text">${item.invoice_number}</p>
+                                            <p class="font-semibold text-light-text">${item.id}</p>
                                             <p class="text-xs text-gray-400">Date: ${item.stage_date_time}</p>
                                         </div>
                                         
@@ -1004,7 +1004,7 @@
                                     ${data.Verification.map(item => `
                                     <div class="invoice-item bg-gray-700 p-3 rounded-lg justify-between items-center transition duration-300 hover:bg-gray-600/70">
                                         <div>
-                                            <p class="font-semibold text-light-text">${item.invoice_number}</p>
+                                            <p class="font-semibold text-light-text">${item.id}</p>
                                             <p class="text-xs text-gray-400">Date: ${item.stage_date_time}</p>
                                         </div>
 
@@ -1048,7 +1048,7 @@
                                     ${data.Cancelled.map(item => `
                                     <div class="invoice-item bg-gray-700 p-3 rounded-lg justify-between items-center transition duration-300 hover:bg-gray-600/70">
                                         <div>
-                                            <p class="font-semibold text-light-text">${item.invoice_number}</p>
+                                            <p class="font-semibold text-light-text">${item.id}</p>
                                             <p class="text-xs text-gray-400">From: ${item.created_at}</p>
                                             <p class="text-xs text-gray-400">At: ${item.stage_date_time}</p>
                                         </div>
@@ -1089,7 +1089,7 @@
                                     ${data.Unpaid.map(item => `
                                     <div class="invoice-item bg-gray-700 p-3 rounded-lg justify-between items-center transition duration-300 hover:bg-gray-600/70">
                                         <div>
-                                            <p class="font-semibold text-light-text">${item.invoice_number}</p>
+                                            <p class="font-semibold text-light-text">${item.id}</p>
                                             <p class="text-xs text-gray-400">From: ${item.created_at}</p>
                                         </div>
 
