--- a/templates/dashboards/packaging/ready_packaging.html
+++ b/templates/dashboards/packaging/ready_packaging.html
@@ -1756,11 +1756,11 @@
 
 
         // Cancel Order Modal Logic
-        function openCancelOrderModal(invoiceNumber, btn) {
+        function openCancelOrderModal(invoiceNumber,main_id, btn) {
             cancelOrderInvoiceNumber = invoiceNumber;
             cancelOrderTargetLi = btn.closest('.invoice-item');
             document.getElementById('cancelReasonInput').value = '';
-            document.getElementById('cancelOrderNote').textContent = 'Are You Sure You Want To Cancel This Order? <' + invoiceNumber + '>';
+            document.getElementById('cancelOrderNote').textContent = 'Are You Sure You Want To Cancel This Order? <' + main_id + '>';
             document.getElementById('cancelOrderModal').classList.add('show');
             setTimeout(() => {
                 document.getElementById('cancelReasonInput').focus();
@@ -1837,8 +1837,8 @@
             }
         }
 
-        async function confirmAndStart(live_order_track_id, invoice_id) {
-            const userConfirmed = confirm(`Are you sure you want to start dispatch? < ${invoice_id} >`);
+        async function confirmAndStart(live_order_track_id, invoice_id,main_id) {
+            const userConfirmed = confirm(`Are you sure you want to start dispatch? <${main_id}>`);
             if (!userConfirmed) return;
 
             const packingNote = document.getElementById('packing_note').value.trim();
@@ -2041,7 +2041,7 @@
                                 </button>
 
                                 
-                                <button class="glass-btn danger" title="Cancel Order" onclick="event.stopPropagation(); openCancelOrderModal('${invoiceObj.number}', this)">
+                                <button class="glass-btn danger" title="Cancel Order" onclick="event.stopPropagation(); openCancelOrderModal('${invoiceObj.number}','${invoiceObj.main_id}', this)">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="1.8" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                                     </svg>
@@ -2126,7 +2126,7 @@
                             <button id="open-popup-btn" onclick="openPopup('${invoiceObj.number}')">
                                 <i class="fa-solid fa-image"></i> Add Photos
                             </button>
-                            <button class="next-to-transport-btn" onclick="confirmAndStart('${invoiceObj.live_order_track_id}','${invoiceObj.number}')">
+                            <button class="next-to-transport-btn" onclick="confirmAndStart('${invoiceObj.live_order_track_id}','${invoiceObj.number}','${invoiceObj.main_id}')">
                                 Ready for Dispatch <i class="fas fa-truck"></i>
                             </button>
                         </div>
