--- a/templates/dashboards/sales/cancel_orders.html
+++ b/templates/dashboards/sales/cancel_orders.html
@@ -2384,13 +2384,13 @@
 
                                 <div class="action-buttons">
 
-                                    <button class="btnb btn-confirm" onclick="event.stopPropagation();openDeleteModal('${invoiceObj.c_id}','${invoiceObj.number}', this,1)">
+                                    <button class="btnb btn-confirm" onclick="event.stopPropagation();openDeleteModal('${invoiceObj.c_id}','${invoiceObj.main_id}', this,1)">
                                         <span class="btn-icon">✓</span>
                                         Confirm Cancellation
                                     </button>
                                     
 
-                                    <button class="btnb btn-reject" onclick="event.stopPropagation();openDeleteModal('${invoiceObj.c_id}','${invoiceObj.number}', this,0)">
+                                    <button class="btnb btn-reject" onclick="event.stopPropagation();openDeleteModal('${invoiceObj.c_id}','${invoiceObj.main_id}', this,0)">
                                         <span class="btn-icon">✕</span>
                                         Reject Cancellation
                                     </button>
