--- a/templates/dashboards/admin/invoice.html
+++ b/templates/dashboards/admin/invoice.html
@@ -161,7 +161,7 @@
                 return;
             }
 
-            document.title = data.data.INVOICE_NUMBER;
+            document.title = data.data.INVOICE_ID;
 
             console.log(data);
 
@@ -177,7 +177,7 @@
                  <header class="mb-8 pb-6 border-b-2 border-gray-500">
 
                             <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
-                                <h1 class="text-4xl font-extrabold text-gray-50 mb-2">${data.data.INVOICE_NUMBER}</h1>   
+                                <h1 class="text-3xl sm:text-4xl md:text-5xl font-black tracking-tighter text-transparent bg-clip-text bg-gradient-to-b from-white to-zinc-500 drop-shadow-sm select-all" id="InvoiceNumber">❑ ${data.data.INVOICE_ID}</h1>   
 
                                 ${data.data.CANCEL_1 === 1 && data.data.CANCEL_2 === 1 && data.data.COMPLETED === 0
                     ?
