now working on move the all work to sales person if it delete

--- a/templates/dashboards/admin/users.html
+++ b/templates/dashboards/admin/users.html
@@ -963,7 +963,7 @@
                         <option value="Packaging">Packaging</option>
                         <option value="Transport">Transport</option>
                         <option value="Account">Account</option>
-                        <option value="Builty">Builty</option>
+                        <!-- <option value="Builty">Builty</option> -->
                         <!-- <option value="Retail">Retail</option> -->
                     </select>
                 </div>
@@ -1035,7 +1035,7 @@
                                 <option value="Packaging">Packaging</option>
                                 <option value="Transport">Transport</option>
                                 <option value="Account">Account</option>
-                                <option value="Builty">Builty</option>
+                                <!-- <option value="Builty">Builty</option> -->
                                 <!-- <option value="Retail">Retail</option> -->
                             </select>
                         </div>
@@ -1078,7 +1078,7 @@
                                 <option value="Packaging">Packaging</option>
                                 <option value="Transport">Transport</option>
                                 <option value="Account">Account</option>
-                                <option value="Builty">Builty</option>
+                                <!-- <option value="Builty">Builty</option> -->
                                 <!-- <option value="Retail">Retail</option> -->
                             </select>
                         </div>
