--- a/templates/dashboards/manager/users.html
+++ b/templates/dashboards/manager/users.html
@@ -967,7 +967,7 @@
                         <option value="Packaging">Packaging</option>
                         <option value="Transport">Transport</option>
                         <option value="Account">Account</option>
-                        <option value="Builty">Builty</option>
+                        <!-- <option value="Builty">Builty</option> -->
                         <!-- <option value="Retail">Retail</option> -->
                     </select>
                 </div>
@@ -1037,7 +1037,7 @@
                                 <option value="Packaging">Packaging</option>
                                 <option value="Transport">Transport</option>
                                 <option value="Account">Account</option>
-                                <option value="Builty">Builty</option>
+                                <!-- <option value="Builty">Builty</option> -->
                                 <!-- <option value="Retail">Retail</option> -->
                             </select>
                         </div>
@@ -1078,7 +1078,7 @@
                                 <option value="Packaging">Packaging</option>
                                 <option value="Transport">Transport</option>
                                 <option value="Account">Account</option>
-                                <option value="Builty">Builty</option>
+                                <!-- <option value="Builty">Builty</option> -->
                                 <!-- <option value="Retail">Retail</option> -->
                             </select>
                         </div>
