--- a/templates/dashboards/sales/edit_invoice.html
+++ b/templates/dashboards/sales/edit_invoice.html
@@ -1506,6 +1506,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link " href="/builty/ready-to-gos">
+                            <i class="bi bi-journal-text me-2"></i>Builty
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link " href="/logout">
                             <i class="bi bi-box-arrow-right me-2"></i>Log out
                         </a>
