--- a/templates/dashboards/sales/main.html
+++ b/templates/dashboards/sales/main.html
@@ -384,6 +384,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link " href="/builty/ready-to-gos">
+                            <i class="bi bi-journal-text me-2"></i>Builty
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link " href="/logout">
                             <i class="bi bi-box-arrow-right me-2"></i>Log out
                         </a>
@@ -548,7 +553,7 @@
                     <div class="hidden sm:grid grid-cols-7 gap-4 py-2 px-1 items-center min-w-full" 
                     onclick="
                 window.location.href = ''
-                ${data.status === 'Draft Orders' ? "+ '/sales/ready-to-go-orders'" : data.status === "In Process... " ? "+ '/sales/my-orders'" : ''}"
+                ${data.status === 'Draft Orders' ? "+ '/sales/ready-to-go-orders'" : data.status === "In Process... " ? "+ '/sales/my-orders'" : data.status === "Builty Orders" ? "+ '/builty/ready-to-gos'" :''}"
                     >
                         <!-- Status Column (Col 3) -->
                         <div class="col-span-3 flex items-center">
@@ -571,7 +576,7 @@
                     <div class="sm:hidden flex flex-col"
                     onclick="
                 window.location.href = ''
-                ${data.status === 'Draft Orders' ? "+ '/sales/ready-to-go-orders'" : data.status === "In Process... " ? "+ '/sales/my-orders'" : ''}"
+                ${data.status === 'Draft Orders' ? "+ '/sales/ready-to-go-orders'" : data.status === "In Process... " ? "+ '/sales/my-orders'" : data.status === "Builty Orders" ? "+ '/builty/ready-to-gos'" : ''}"
                     >
                         <!-- Mobile Status Header -->
                         <div class="flex items-center justify-between pb-3 border-b border-gray-100">
@@ -696,14 +701,14 @@
                         totalCount: apiData.running_orders.count,
                         description: "Revenue-generating orders in progress."
                     },
-                    // {
-                    //     status: "Completed Orders",
-                    //     icon: "check-circle",
-                    //     color: "text-green-700",
-                    //     bg: "bg-green-50",
-                    //     totalCount: apiData.completed_orders.count,
-                    //     description: "Orders successfully fulfilled and closed."
-                    // }
+                    {
+                        status: "Builty Orders",
+                        icon: "book",
+                        color: "text-green-700",
+                        bg: "bg-green-50",
+                        totalCount: apiData.total_draft_builty_order.count,
+                        description: "Orders successfully fulfilled and closed."
+                    }
                 ];
 
                 // Map the specific canceled metric
