apply all changes at edit invoice

--- a/templates/dashboards/sales/sell.html
+++ b/templates/dashboards/sales/sell.html
@@ -2441,6 +2441,7 @@
                 document.getElementById('selectedMobile').textContent = mobile;
                 document.getElementById('selectedPincode').textContent = pincode;
                 document.getElementById('selectedAddress').textContent = address;
+                document.getElementById('transportCompany').value = transport_id;
 
                 if (document.getElementById('deliveryMode').value === 'transport') {
 
