--- a/templates/dashboards/sales/edit_invoice.html
+++ b/templates/dashboards/sales/edit_invoice.html
@@ -2347,6 +2347,11 @@
                 document.getElementById('selectedMobile').textContent = "";
                 document.getElementById('selectedPincode').textContent = "";
                 document.getElementById('selectedAddress').textContent = "";
+                document.getElementById('transportCompany').value = null;
+                document.getElementById('noTransport').classList.remove('hidden');
+                document.getElementById('transportCard').classList.add('hidden');
+                document.getElementById('transportCompany').value = null;
+
             }
 
             document.addEventListener('click', (e) => {
@@ -2644,7 +2649,7 @@
             }
 
             // Load customers and products from the server
-            selectCustomer(invoiceData.c_mobile, invoiceData.c_name, invoiceData.c_address, invoiceData.c_pincode);
+            selectCustomer(invoiceData.c_mobile, invoiceData.c_name, invoiceData.c_address, invoiceData.c_pincode, invoiceData.c_transport_id);
             updateProductTable();
             fetchEvents();
 
@@ -2695,12 +2700,29 @@
             // Delivery mode select change handler
             document.getElementById('deliveryMode').addEventListener('change', function () {
                 const transportCompanyGroup = document.getElementById('transportCompanyGroup');
+                const transportCards = document.getElementById('transportCard');
+
                 if (this.value === 'transport') {
+
                     transportCompanyGroup.style.display = 'block';
+                    customerPincode = document.getElementById('selectedPincode').textContent;
+                    transport_id = document.getElementById('transportCompany').value;
+
+                    if (transport_id !== 'null' && transport_id !== "") {
+                        pincodeFetchTransport(transport_id, 1);
+                    } else {
+                        if (customerPincode === "N/A" || customerPincode === "") {
+                            document.getElementById('noTransport').classList.remove('hidden');
+                        }
+                        else {
+                            pincodeFetchTransport(customerPincode, 0);
+                        }
+                    }
+
 
                 } else {
                     transportCompanyGroup.style.display = 'none';
-                    document.getElementById('transportCompany').value = '';
+                    transportCards.classList.add('hidden');
                 }
             });
 
@@ -2902,6 +2924,15 @@
 
                 // Show modal
                 const modal = new bootstrap.Modal(document.getElementById('customerModal'));
+
+                removeTransport();
+                document.getElementById('customerName').value = '';
+                document.getElementById('customerAddress').value = '';
+                document.getElementById('customerState').value = '';
+                document.getElementById('customerPincode').value = '';
+                document.getElementById('customerMobile').value = '';
+                document.getElementById('CustomerCompanyName').value = '';
+                document.getElementById('customerCity').value = '';
                 modal.show();
 
             }
@@ -2934,13 +2965,15 @@
                 document.getElementById('modalFinalPrice').value = (basePrice * quantity).toFixed(2);
             }
 
-            // Add new customer
             function addCustomer() {
                 const customerName = document.getElementById('customerName').value;
                 const customerAddress = document.getElementById('customerAddress').value;
                 const customerState = document.getElementById('customerState').value;
                 const customerPincode = document.getElementById('customerPincode').value;
                 const customerMobile = document.getElementById('customerMobile').value;
+                const customerCompany = document.getElementById('CustomerCompanyName').value;
+                const customerCity = document.getElementById('customerCity').value;
+                const customerTransportCompany = document.getElementById('CustomerTransportCompanyId').value;
 
                 if (!customerName || !customerAddress || !customerPincode || !customerMobile) {
                     alert('Please fill in all fields with valid information.');
@@ -2968,7 +3001,10 @@
                         address: customerAddress,
                         state: customerState,
                         pincode: customerPincode,
-                        mobile: customerMobile
+                        mobile: customerMobile,
+                        company: customerCompany,
+                        city: customerCity,
+                        transportCompany: customerTransportCompany
                     })
                 })
                     .then(response => response.json())
@@ -2984,7 +3020,7 @@
                             document.getElementById('customerPincode').value = '';
                             document.getElementById('customerMobile').value = '';
 
-                            selectCustomer(customerMobile, customerName, customerAddress, customerPincode);
+                            selectCustomer(customerMobile, customerName, customerAddress, customerPincode, customerTransportCompany);
 
                         } else {
                             alert(data.error);
@@ -2995,6 +3031,7 @@
                         alert('Failed to add customer. Please try again.');
                     });
             }
+
 
             function addOrUpdateProduct(productObj) {
                 const { id, name, finalPrice, quantity } = productObj;
@@ -3430,7 +3467,7 @@
                 const transportCompany = document.getElementById('transportCompany').value.trim();
 
                 if (deliveryMode === 'transport' && transportCompany === '') {
-                    alert('Please enter the transport company name.');
+                    alert('Please select the transport company.');
                     return;
                 }
 
@@ -3486,7 +3523,7 @@
                                     <div class="alert alert-success d-flex justify-content-between align-items-center">
                                         <div>
                                             <i class="fas fa-file-pdf text-danger"></i>
-                                            <strong>${data.invoice_number}</strong>
+                                            <strong>${data.invoice_id}</strong>
                                         </div>
                                         <button type="button" id="copyBtn" onclick="copyLink();">
                                             <i class="fas fa-copy"></i> <span id="copyText">Copy Link</span>
